--- a/themes/SimpleComment/view/omeka/site/item/show.phtml
+++ b/themes/SimpleComment/view/omeka/site/item/show.phtml
@@ -84,3 +84,22 @@ $itemMedia = $item->media();
     </div>
 </div>
 
+<div class="container">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <?php
+        $plugins = $this->getHelperPluginManager();
+        $hasNext = $plugins->has('previousResource');
+        ?>
+        <?php if ($hasNext): ?>
+            <div class="previous-next-items">
+                <?php if ($previous = $this->previousResource($resource)): ?>
+                    <?= $previous->link($translate('Previous item'), null, ['class' => 'previous-item']) ?>
+                <?php endif; ?>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <?php if ($next = $this->nextResource($resource)): ?>
+                    <?= $next->link($translate('Next item'), null, ['class' => 'next-item']) ?>
+                <?php endif; ?>
+            </div>
+        <?php endif; ?>
+    </div>
+</div>
