--- a/themes/SimpleComment/view/common/comment-single.phtml
+++ b/themes/SimpleComment/view/common/comment-single.phtml
@@ -47,23 +47,51 @@ $gravatarUrl = '//www.gravatar.com/avatar/' . md5(strtolower(trim($comment->emai
         color:#ff9138;
         cursor:pointer;
     }
+    .be-ava-comment-thumb {
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+    }
+    .be-img-comment-thumb {
+        width: 24px;
+        height: 24px;
+        float: left;
+        margin-bottom: 5px;
+    }
+    .be-comment-content-thumb {
+        margin-left: 30px;
+    }
+    .be-comment-time-thumb {
+        float: right;
+        font-size: 11px;
+        color: #b4b7c1;
+    }
 </style>
 <?php if ($count > 0): ?>
 <div class="count_comment_children" data-toggle="collapse" href="#replyOne<?= $escape($comment->id()) ?>">
     <?= $count ?> Commentaire(s)
 </div>
 <?php endif; ?>
+<?php
+$parent = $comment->parent();
+$str_con = "";
+if (($parent && $parent->id() == $comment->id()) || (empty($parent) && empty($parent_id))) {
+    $str_con = "";
+} else {
+    $str_con = "-thumb";
+}
+?>
 <div class="be-comment">
-<div class="be-img-comment">
-    <img class="be-ava-comment" src="<?= $gravatarUrl ?>" />
-</div>
+    <div class="be-img-comment<?= $str_con ?>">
+        <img class="be-ava-comment<?= $str_con ?>" src="<?= $gravatarUrl ?>" />
+    </div>
 
-<div class="be-comment-content">
+<div class="be-comment-content<?= $str_con ?>">
 <div class="comment-body<?php if ($flagged = $comment->isFlagged()): ?> comment-flagged<?php endif; ?><?php if ($comment->isSpam()): ?> comment-spam<?php endif; ?>">
     <span class="be-comment-name">
         <?= $authorText ?>
     </span>
-    <span class="be-comment-time">
+    <span class="be-comment-time<?= $str_con ?>">
         <i class="fa fa-clock-o"></i>
         <?= $i18n->dateFormat($comment->created()) ?>
     </span>
@@ -77,7 +105,6 @@ $gravatarUrl = '//www.gravatar.com/avatar/' . md5(strtolower(trim($comment->emai
 <div class="social_network">
     <ul>
 <?php
-    $parent = $comment->parent();
     // Don't display the flag when the comments are moderated a priori.
 ?>
 <?php if ((!$setting('comment_public_require_moderation') || !$setting('comment_user_require_moderation')) && ($parent && $parent->id() == $comment->id()) || (empty($parent) && empty($parent_id))): ?>
