--- a/themes/SimpleComment/view/common/comment-single.phtml
+++ b/themes/SimpleComment/view/common/comment-single.phtml
@@ -57,6 +57,7 @@ $gravatarUrl = '//www.gravatar.com/avatar/' . md5(strtolower(trim($comment->emai
         height: 24px;
         float: left;
         margin-bottom: 5px;
+        padding-top: 8px;
     }
     .be-comment-content-thumb {
         margin-left: 30px;
@@ -69,7 +70,7 @@ $gravatarUrl = '//www.gravatar.com/avatar/' . md5(strtolower(trim($comment->emai
 </style>
 <?php if ($count > 0): ?>
 <div class="count_comment_children" data-toggle="collapse" href="#replyOne<?= $escape($comment->id()) ?>">
-    <?= $count ?> Commentaire(s)
+    <?= $count > 1 ? $count . " Commentaires" : $count . " Commentaire" ?>
 </div>
 <?php endif; ?>
 <?php
@@ -119,7 +120,7 @@ if (($parent && $parent->id() == $comment->id()) || (empty($parent) && empty($pa
 <?php endif; ?>
 
 <?php if ($count > 0): ?>
-        <li><i class="count-comment fa fa-comment" data-toggle="collapse" href="#replyOne<?= $escape($comment->id()) ?>" title="<?= $count ?> Commentaire(s)"></i></li>
+        <li><i class="count-comment fa fa-comment" data-toggle="collapse" href="#replyOne<?= $escape($comment->id()) ?>" title="<?= $count > 1 ? $count . " Commentaires" : $count . " Commentaire" ?>"></i></li>
 <?php endif; ?>
 
 <?php if ($comment->userIsAllowed('create') && ($parent && $parent->id() == $comment->id()) || (empty($parent) && empty($parent_id))): ?>
